Dibuat menggunakan Colab

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFCs1MCr/VDZU/iI9XNxNj",
+      "authorship_tag": "ABX9TyMh4q5Spfc/YKsq+oJywvSY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,30 +28,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jc828q36NBIn",
-        "outputId": "c3fcd419-bb14-49fc-d969-933e5534f3d8"
+        "outputId": "75635595-f41c-49c9-fbe9-e393dc5fd0d1"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Michael Rafael Nababan\n",
-            "18\n",
-            "Teknik Elektro\n",
-            "RPE\n",
-            "3\n",
-            "4232401005\n",
-            "False\n",
-            "batam, 29-09-2006\n",
-            "kristen protestan\n",
-            "+6281372004910\n",
-            "michael.r.nbbn\n"
+            "list: ['Michael Rafael Nababan', 18, 'Teknik Elektro', 'Berenang', 'mahasiswa', 'Politeknik negeri batam']\n",
+            "tuple: ('Michael Rafael Nababan', 18, 'Teknik Elektro', 'Berenang', 'mahasiswa', 'Politeknik negeri batam')\n",
+            "set: {'Michael Rafael Nababan', 'Teknik Elektro', 'mahasiswa', 'Berenang', 'Politeknik negeri batam', 18}\n",
+            "dict: {'nama': 'Michael Rafael Nababan', 'umur': 18, 'jurusan': 'Teknik Elektro', 'hobi': 'Berenang', 'status': 'mahasiswa', 'universitas': 'Politeknik negeri batam'}\n"
           ]
         }
       ],
@@ -60,29 +53,29 @@
         "\n",
         "nama = \"Michael Rafael Nababan\"\n",
         "umur = 18\n",
-        "jurusan = 'Teknik Elektro'\n",
-        "program_studi = \"RPE\"\n",
-        "semester = 3\n",
-        "nim = \"4232401005\"\n",
-        "status_lulus = False\n",
-        "tempat_tanggal_lahir = \"batam, 29-09-2006\"\n",
-        "\n",
-        "no_telepon = \"+6281372004910\"\n",
-        "instagram = \"michael.r.nbbn\"\n",
+        "jurusan = \"Teknik Elektro\"\n",
+        "hobi = \"Berenang\"\n",
+        "status = \"mahasiswa\"\n",
+        "universitas = \"Politeknik negeri batam\"\n",
         "\n",
         "\n",
-        "print (nama)\n",
-        "print (umur)\n",
-        "print (jurusan)\n",
-        "print (program_studi)\n",
-        "print (semester)\n",
-        "print (nim)\n",
-        "print (status_lulus)\n",
-        "print (tempat_tanggal_lahir)\n",
-        "print (agama)\n",
-        "print (no_telepon)\n",
-        "print (instagram)\n",
-        "\n"
+        "biodata_list = [nama,umur,jurusan,hobi,status,universitas]\n",
+        "biodata_tuple = (nama,umur,jurusan,hobi,status,universitas)\n",
+        "biodata_set = {nama,umur,jurusan,hobi,status,universitas}\n",
+        "biodata_dict = {\n",
+        "    \"nama\":nama,\n",
+        "    \"umur\":umur,\n",
+        "    \"jurusan\":jurusan,\n",
+        "    \"hobi\":hobi,\n",
+        "    \"status\":status,\n",
+        "    \"universitas\":universitas,\n",
+        "    }\n",
+        "\n",
+        "#output\n",
+        "print (\"list:\",biodata_list)\n",
+        "print (\"tuple:\",biodata_tuple)\n",
+        "print (\"set:\",biodata_set)\n",
+        "print (\"dict:\",biodata_dict)"
       ]
     }
   ]
