Dibuat menggunakan Colab

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 1,
       "metadata": {
+        "id": "_KNOc1zx51kI",
+        "outputId": "79f3d483-0765-4122-d04f-dd90356af4a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "jc828q36NBIn",
-        "outputId": "75635595-f41c-49c9-fbe9-e393dc5fd0d1"
+        }
       },
       "outputs": [
         {
@@ -43,7 +43,7 @@
           "text": [
             "list: ['Michael Rafael Nababan', 18, 'Teknik Elektro', 'Berenang', 'mahasiswa', 'Politeknik negeri batam']\n",
             "tuple: ('Michael Rafael Nababan', 18, 'Teknik Elektro', 'Berenang', 'mahasiswa', 'Politeknik negeri batam')\n",
-            "set: {'Michael Rafael Nababan', 'Teknik Elektro', 'mahasiswa', 'Berenang', 'Politeknik negeri batam', 18}\n",
+            "set: {'Politeknik negeri batam', 'Teknik Elektro', 18, 'Berenang', 'mahasiswa', 'Michael Rafael Nababan'}\n",
             "dict: {'nama': 'Michael Rafael Nababan', 'umur': 18, 'jurusan': 'Teknik Elektro', 'hobi': 'Berenang', 'status': 'mahasiswa', 'universitas': 'Politeknik negeri batam'}\n"
           ]
         }
