Dibuat menggunakan Colab

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6dZSRS0OeNs/D4UzTADJU",
+      "authorship_tag": "ABX9TyOuVh5jCZnBHvYurQNAWRRz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,111 +28,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
+        "id": "71ukZK-dxbFU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "_KNOc1zx51kI",
-        "outputId": "91167ebf-fbc5-44d2-bdfe-2ad86a3cb83f"
+        "outputId": "8abf0c03-02b6-4727-e095-3ca2db901fbe"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "list: ['Michael Rafael Nababan', 18, 'Teknik Elektro', 'Berenang', 'mahasiswa', 'Politeknik negeri batam']\n",
-            "tuple: ('Michael Rafael Nababan', 18, 'Teknik Elektro', 'Berenang', 'mahasiswa', 'Politeknik negeri batam')\n",
-            "set: {'Politeknik negeri batam', 18, 'mahasiswa', 'Berenang', 'Michael Rafael Nababan', 'Teknik Elektro'}\n",
-            "dict: {'nama': 'Michael Rafael Nababan', 'umur': 18, 'jurusan': 'Teknik Elektro', 'nim': 4232401005, 'status': False, 'semester': 3}\n"
+            "Michael Rafael Nababan\n",
+            "18\n",
+            "RPE\n",
+            "3\n",
+            "4232401005\n",
+            "False\n",
+            "batam, 29-09-2006\n",
+            "+6281372004910\n",
+            "michael.r.nbbm\n"
           ]
         }
       ],
       "source": [
-        "#soal no 6\n",
-        "# Biodata Saya\n",
+        "#Biodata saya\n",
         "\n",
-        "# List\n",
-        "biodata_list = [\"Michael Rafael Nababan\", 18, \"Teknik Elektro\", \"Berenang\", \"mahasiswa\", \"Politeknik negeri batam\"]\n",
-        "# Tuple\n",
-        "biodata_tuple = (\"Michael Rafael Nababan\", 18, \"Teknik Elektro\", \"Berenang\", \"mahasiswa\", \"Politeknik negeri batam\")\n",
-        "# Set\n",
-        "biodata_set = {\"Michael Rafael Nababan\", 18, \"Teknik Elektro\", \"Berenang\", \"mahasiswa\", \"Politeknik negeri batam\"}\n",
+        "nama = \"Michael Rafael Nababan\"\n",
+        "umur = 18\n",
+        "jurusan = \"Teknik Elektro\"\n",
+        "program_studi = \"RPE\"\n",
+        "semester = 3\n",
+        "nim = \"4232401005\"\n",
+        "status_lulus = False\n",
+        "tempat_tanggal_lahir = \"batam, 29-09-2006\"\n",
         "\n",
-        "# Dictionary\n",
-        "biodata_dict = {\n",
-        "    \"nama\":\"Michael Rafael Nababan\",\n",
-        "    \"umur\":18,\n",
-        "    \"jurusan\":\"Teknik Elektro\",\n",
-        "    \"nim\" : 4232401005,\n",
-        "    \"status\": False,\n",
-        "    \"semester\":3,\n",
-        "}\n",
-        "\n",
-        "# Output\n",
-        "print (\"list:\",biodata_list)\n",
-        "print (\"tuple:\",biodata_tuple)\n",
-        "print (\"set:\",biodata_set)\n",
-        "print (\"dict:\",biodata_dict)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "hi2Xi4vapANa"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#soal no 7\n",
-        "#variabel dengan annotation\n",
-        "\n",
-        "nama:str=\"michael rafael nababan\"\n",
-        "umur:int=18\n",
-        "jurusan:str=\"teknik elektro\"\n",
-        "nim :int =\"4232401005\"\n",
-        "status:str= False\n",
-        "semester:int=3\n",
-        "\n",
-        "#fungsi annotation\n",
-        "def luas_persegi(sisi:float) -> float:\n",
-        "  \"\"\"menghitung luas persegi berdasarkan panjang sisi.:\"\"\"\n",
-        "  return sisi * sisi\n",
+        "no_telepon = \"+6281372004910\"\n",
+        "instragram = \"michael.r.nbbm\"\n",
         "\n",
         "\n",
-        "#output\n",
-        "print(f\"nama:{nama}\")\n",
-        "print(f\"umur:{umur}\")\n",
-        "print(f\"jurusan:{jurusan}\")\n",
-        "print(f\"nim:{nim}\")\n",
-        "print(f\"status:{status}\")\n",
-        "print(f\"semester:{semester}\")\n",
-        "print(f\"luas_persegi(sisi 4.5): {luas_persegi(4.5)}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "sdGzWBN1pAiX",
-        "outputId": "f67e91b3-d726-48b3-df3f-8323a8b7e6fb"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "nama:michael rafael nababan\n",
-            "umur:18\n",
-            "jurusan:teknik elektro\n",
-            "nim:4232401005\n",
-            "status:False\n",
-            "semester:3\n",
-            "luas_persegi(sisi 4.5): 20.25\n"
-          ]
-        }
+        "print (nama)\n",
+        "print (umur)\n",
+        "print (program_studi)\n",
+        "print (semester)\n",
+        "print (nim)\n",
+        "print (status_lulus)\n",
+        "print (tempat_tanggal_lahir)\n",
+        "\n",
+        "print (no_telepon)\n",
+        "print (instragram)\n"
       ]
     }
   ]
